<resources>
    <string name="app_name">Tutorly</string>
    <string name="filter">Filter</string>
    <string name="subject_image_description">Example image of subject</string>
    <string name="activity_filter_selected_subjects">Selected subjects:</string>
    <string name="activity_filter_available_subjects">Available subjects:</string>
    <string name="filterRadioBtnLvl1">School</string>
    <string name="filterRadioBtnLvl2">Matura</string>
    <string name="filterRadioBtnLvl3">University</string>
    <string name="title_activity_town_selection">Town Selection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="nextstep">Next Step</string>
    <string name="city">Please type in your city:</string>
    <string name="after_selection" translatable="false"> </string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <!-- Place-API autocomplete / TownSelection -->
    <string name="API" translatable="false">AIzaSyBpVMXoMWaJm8DaHkwpWi16t5IeOKAJ7FY</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="action_register">Register</string>
    <string name="title_activity_tester" translatable="false">tester</string>
    <string name="choose_lang">Choose Language</string>
    <string name="town_selection">Town Selection</string>
    <string name="change_language">Change Language</string>
    <string name="register_account">Dont have an account? Register</string>
    <string name="have_account">Already have an account? Sign in</string>
    <string name="subject">Subject</string>
    <string name="german">German</string>
    <string name="german_lang">German Language</string>
    <string name="pyhsics">Physics</string>
    <string name="lear_physics">Learn Physics</string>
    <string name="english">English</string>
    <string name="learn_english">Learn English</string>
    <string name="maths">Maths</string>
    <string name="learn_maths">Learn 2+2</string>
    <string name="example_subject">ExampleSubject</string>
    <string name="learn_example_subject">learn ExampleSubject</string>
    <string name="city_hint">City</string>
    <string name="lang_short">EN</string>
    <string name="filterDone">Done</string>
    <string name="show_tutors">Show Tutors</string>
    <string name="title_activity_new_tutor">Become a Teaching Assistant</string>
    <string name="tutor_phone_number">Phone Number</string>
    <string name="btnApply">Apply</string>
    <string name="available_tutors">Available tutors</string>
    <string name="done">Done</string>
    <string name="tutorName">Name:</string>
    <string name="tutorSurname">Surname:</string>
    <string name="tutorPhone">Phone:</string>
    <string name="tutorEmail">Email:</string>
    <string name="tutorInformation">Tutor Information</string>
    <string name="tutorSubject">Subjects</string>


</resources>