<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTutorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorInformation"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <View
            android:id="@+id/filterLineSplit2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/tutorImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".66"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTutorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:text="@string/tutorName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTutorAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:text="@string/tutorSurname"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTutorGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:text="@string/tutorPhone"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTutorMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"

                    android:text="@string/tutorEmail"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tutorSubject"
            android:textSize="34sp"
            android:textStyle="bold"
            android:paddingTop="5dp"/>

        <View
            android:id="@+id/filterLineSplit3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/subjectslist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>