<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1E3FF"
    tools:context=".FilterActivity">

    <RadioGroup
        android:id="@+id/filterDifficultyRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/filterRadioBtnLvl1"
            android:buttonTint="@color/radioButtonTint"
            />
        <RadioButton
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/filterRadioBtnLvl2"
            android:buttonTint="@color/radioButtonTint"
            />
        <RadioButton
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/filterRadioBtnLvl3"
            android:checked="true"
            android:buttonTint="@color/radioButtonTint"
            />

    </RadioGroup>
    <View
        android:id="@+id/filterLineSplit"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/filterDifficultyRadioGroup"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRecyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filterLineSplit"
        />
</RelativeLayout>